Wed Dec 22 01:24:01 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/queryimmodules.c (main): print out the version and binary
	name in the header comment.  Problem reported by Seth Nickell.

2004-12-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkliststore.c (gtk_list_store_sort_iter_changed): Pass a
	root path to gtk_tree_model_rows_reordered().  (#161720,
	Marcin Krzyzanowski)

	* gtk/gtkactiongroup.c (gtk_action_group_translate_string): Don't 
	translate NULL messages.  (#161789, Morten Welinder)

	* gtk/gtkmessagedialog.c (setup_primary_label_font): Don't show
	the secondary label on show_all().  (#161707, Christian Persch)

2004-12-19  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkdnd-win32.c (resolve_link, gdk_dropfiles_filter):
	Use wide character API when available. Use UTF-8 for filenames.

	* gdk/win32/gdkselection-win32.c (_gdk_dropfiles_store): Include
	the string's trailing zero byte in the property's length, just for
	safety.

2004-12-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserentry.c (check_completion_callback) 
	(load_directory_callback): Add missing GDK_THREADS_ENTER/LEAVE.

	* gtk/gtkfilechooserdefault.c (edited_idle_cb) 
	(shortcuts_drag_outside_idle_cb): Add missing 
	GDK_THREADS_ENTER/LEAVE.  (#161604)
	
	* gtk/gtkfilechooserdefault.c (selection_check_foreach_cb): 
	(list_select_func): Don't call gtk_file_info_get_is_folder()
	on NULL. 

	* gtk/gtkaboutdialog.c (gtk_about_dialog_get_logo_icon_name): 
	(gtk_about_dialog_init): Add missing initializations.  (#161646,
	Torsten Schoenfeld)

2004-12-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.6.0 ===

	* gtk/gtkmenuitem.c: Add a forgotten cast.  (Morten Welinder) 

	* gtk/gtkfilechooserbutton.c: Add another forgotten include. (Morten
	Welinder)

2004-12-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (dialog_response_cb): Only unblock the handlers
	if they are blocked.
